made navbar fixed and included z-index so page elements flow behind it. Also made correction to title on trivia_game.html file

--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
 }
 
 .nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 2;
   background: #d5f2e3;
   font-size: large;
   font-family: "JetBrains Mono", monospace;
